# crc32

./: CMakeLists.txt  LICENSE  crc32.pc.in
include/: crc32.h
src/: crc32.c
